# revca_spaceship_searcher

./: .gitignore  CMakeLists.txt  README  README.md  cpp_lib_2_js_lib.py  sample-singlerot-bad.jsons  sample-singlerot.jsons
include/: analyze.hpp  bruteforce_pattern_source.hpp  cpp-revca.hpp  field.hpp  file_pattern_source.hpp  mathutil.hpp  pattern.hpp  pattern_enumerator.hpp  random_search.hpp  rule.hpp  singlerot.hpp  streamed_analysys.hpp  tree_pattern.hpp  zigzag.hpp
src/: CMakeLists.txt  analyze.cpp  bruteforce.cpp  bruteforce_pattern_source.cpp  bulk_analyzer.cpp  cpp-revca.cpp  field.cpp  file_pattern_source.cpp  gason.cpp  pattern.cpp  pattern_enumerator.cpp  random_search.cpp  rule.cpp  sample_bruteforce_patterns.cpp  sample_random_seed_search.cpp  singlerot.cpp  streamed_analysys.cpp  tree_pattern.cpp  zigzag.cpp
test/: CMakeLists.txt  test_analyze_pattern.cpp  test_pattern.cpp  test_transform.cpp  test_tree_pattern.cpp
